# PrismEX

./: .gitignore  MANIFEST.in  README.md  prismex_html  prismex_rules.example.json  pyproject.toml  report.html  report.json  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
examples/plugins/: prismex_plugin_template.py
prismex/: __init__.py  cli.py  core.py  heuristics.py  paths.py  pluginsystem.py  report.py  scoring.py  utils.py
prismex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
prismex/config/: default.json
prismex/data/signatures/yara_plugins/pe/: peid.yara
prismex/modules/: __init__.py  apialert.py  autocomplete.py  directories.py  features.py  fileurl.py  functions.py  macro.py  meta.py  sections.py  stringstat.py  virustotal.py  yara_check.py
prismex/plugins/: __init__.py  example_metadata.py
prismex/templates/: index.html.j2  report.html.j2
tests/: conftest.py  test_plugins.py  test_scoring.py
