# @QK
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110

[tool.pytest.ini_options]
addopts = "-q"

[project]
name = "prismex"
version = "0.3.1"
description = "PrismEX - static analysis for Portable Executable (PE) files"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "pefile",
  "python-magic",
  "jinja2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "build",
]
yara = [
  "yara-python",
]
